--- a/estilo.css
+++ b/estilo.css
@@ -36,12 +36,13 @@ body {
 }
 
 header {
-   
+   padding-top: 100px ;
     text-align: center;
     padding: 8px;
     margin-top: -30px;
-    background-image: linear-gradient(to right,  #2FA866, #1A5C37);
-    min-height: 170px;
+    background-image: linear-gradient(to bottom,  #2FA866, #1A5C37);
+    min-height: 180px;
+
 }
 header  p {
     padding-right: 30px;
@@ -64,15 +65,15 @@ header h1 {
 }
 
 nav {
-    background-image: linear-gradient(to right,  #2FA866, #1A5C37);
+    
     
     
 }
 
-nav a:hover {
+ a:hover {
     border-radius: 10px;
     text-decoration: underline;
-    background-color: var(--cor5);
+    background-color: var(--cor4);
 }
 nav a {
    color: white;
@@ -100,13 +101,21 @@ main {
     
     max-width: 1000px;
     margin: auto;
-    
+    --cor0: #C5EBD6;
+    --cor1: #83E1AD;
+    --cor2: #3DDC84;
+    --cor3: #2FA866;
+    --cor4: #1A5C37;
+    --cor5: #063D1E;
     
     background-color: white;
     padding: 20px;
     font-family: var(--font-android);
 }
 
+main h1, h2 {
+    background-image: linear-gradient(to right, #83E1AD, transparent);
+}
 
 
 
@@ -161,7 +170,7 @@ aside ul {
 }
 
 
-aside h1 {
+aside  h3 {
     margin: -10px -10px 0px ;
   background-color: var(--cor4);
   color: white;
